[project]
name = "mmada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "clip",
    "datasets>=4.4.2",
    "deepspeed>=0.18.3",
    "diffusers==0.32.2",
    "gradio==5.30.0",
    "hf-transfer>=0.1.9",
    "image-reward>=1.5",
    "jaxtyping>=0.3.4",
    "lightning>=2.6.0",
    "math-verify>=0.8.0",
    "nvidia-cuda-runtime>=13.0.48",
    "nvshmem4py-cu13>=0.2.1",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyarrow>=22.0.0",
    "setuptools>=80.9.0",
    "torchmetrics==1.6.2",
    "transformer-engine[core-cu13,pytorch]>=2.11.0",
    "transformers==4.46.0",
    "triton>=3.5.1",
    "trl==0.17.0",
    "typeguard>=4.4.4",
    "wandb>=0.23.1",
    "webdataset>=1.0.2",
    "wheel>=0.45.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
default = true

[tool.uv]
index-strategy = "unsafe-best-match"
